kubernetes/apps/binner/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binner
  namespace: binner
spec:
  selector:
    matchLabels:
      app: binner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: binner
    spec:
      containers:
        - name: binner
          image: binnerofficial/binner:v2.6.25@sha256:31c9e28c00b8c4ed733e0845c510769f8da3053bae3068d3dc6c205a4804b724
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
            limits:
              memory: 384Mi
          ports:
            - containerPort: 8090
              name: main
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: binner-data
